--- a/Symfony/src/CoreBundle/Resources/config/routing.yml
+++ b/Symfony/src/CoreBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
 core_homepage:
     path:     /
     defaults: { _controller: CoreBundle:Default:index }
+    
+hello_world:
+    path:    /hello-world
+    defaults: { _controller: CoreBundle:Connexion:index }
