--- a/Symfony/src/CoreBundle/Resources/config/routing.yml
+++ b/Symfony/src/CoreBundle/Resources/config/routing.yml
@@ -1,7 +1,3 @@
-core_homepage:
-    path:     /
-    defaults: { _controller: CoreBundle:Default:index }
-    
-hello_world:
+connexion_home:
     path:    /hello-world
     defaults: { _controller: CoreBundle:Connexion:index }
