Ajout controleur Partie

--- a/Symfony/src/CoreBundle/Resources/config/routing.yml
+++ b/Symfony/src/CoreBundle/Resources/config/routing.yml
@@ -1,7 +1,11 @@
 connexion_home:
     path:    /home
-    defaults: { _controller: CoreBundle:Connexion:index }
+    defaults: { _controller: CoreBundle:Connexion:log }
    
 inscription:
     path:    /inscription
-    defaults: { _controller: CoreBundle:Inscription:index }
+    defaults: { _controller: CoreBundle:Connexion:sign }
+    
+partie:
+    path:    /partie
+    defaults: { _controller: CoreBundle::index }
