--- a/Symfony/app/config/routing.yml
+++ b/Symfony/app/config/routing.yml
@@ -2,3 +2,13 @@ core:
     resource: "@CoreBundle/Resources/config/routing.yml"
     prefix:   /
 
+login:
+    path: /login
+    defaults:
+        _controller: CoreBundle:Connexion:log
+
+login_check:
+    path: /login_check
+
+logout:
+    path: /logout
