Modifs connexion/deconnexion

--- a/Symfony/src/CoreBundle/Resources/config/routing.yml
+++ b/Symfony/src/CoreBundle/Resources/config/routing.yml
@@ -1,3 +1,7 @@
+accueil:
+    path:    /
+    defaults: { _controller: CoreBundle:Connexion:log }
+
 connexion_home:
     path:    /home
     defaults: { _controller: CoreBundle:Connexion:log }
@@ -8,4 +12,4 @@ inscription:
     
 partie:
     path:    /partie
-    defaults: { _controller: CoreBundle::index }
+    defaults: { _controller: CoreBundle:Partie:index }
