--- a/Symfony/app/config/security.yml
+++ b/Symfony/app/config/security.yml
@@ -1,10 +1,12 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
-    
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
         CoreBundle\Entity\Joueur: plaintext
+        
+    role_hierarchy:
+        ROLE_ADMIN:    ROLE_USER
     
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
@@ -17,15 +19,10 @@ security:
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-            
-        main_login:
-            pattern:   ^/login$
-            anonymous: true     
-            
+            security: false   
         main:
             pattern:   ^/
-            anonymous: false
+            anonymous: true
             provider : main
             form_login:
                 login_path: login
