--- a/Symfony/composer.json
+++ b/Symfony/composer.json
@@ -21,6 +21,7 @@
     },
     "require": {
         "php": ">=5.5.9",
+        "friendsofsymfony/user-bundle": "dev-master",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/orm": "^2.5",
         "doctrine/doctrine-fixtures-bundle": "~2.3",
