--- a/Symfony/app/config/config.yml
+++ b/Symfony/app/config/config.yml
@@ -7,11 +7,11 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
+    locale: fr
 
 framework:
     #esi: ~
-    #translator: { fallbacks: ['%locale%'] }
+    translator: { fallbacks: ['%locale%'] }
     secret: '%secret%'
     router:
         resource: '%kernel.project_dir%/app/config/routing.yml'
@@ -76,5 +76,5 @@ fos_user:
     firewall_name: main                      
     user_class:    CoreBundle\Entity\Joueur
     from_email:
-        address: l3@loveletter.com
+        address: L3@loveletter.com
         sender_name: LoveLetter
