--- a/Symfony/app/config/routing.yml
+++ b/Symfony/app/config/routing.yml
@@ -1,14 +1,22 @@
 core:
     resource: "@CoreBundle/Resources/config/routing.yml"
     prefix:   /
+    
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
-login:
-    path: /login
-    defaults:
-        _controller: CoreBundle:Connexion:log
+fos_user_profile:
+    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+    prefix: /profile
 
-login_check:
-    path: /login_check
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
 
-logout:
-    path: /logout
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /resetting
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profile    
