--- a/Symfony/app/config/security.yml
+++ b/Symfony/app/config/security.yml
@@ -2,8 +2,7 @@
 # https://symfony.com/doc/current/security.html
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
-        CoreBundle\Entity\Joueur: plaintext
+        CoreBundle\Entity\Joueur: sha512
         
     role_hierarchy:
         ROLE_ADMIN:    ROLE_USER
@@ -11,9 +10,7 @@ security:
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
         main:
-            entity:
-                class:    CoreBundle\Entity\Joueur
-                property: login
+            id: fos_user.user_provider.username
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -25,8 +22,10 @@ security:
             anonymous: true
             provider : main
             form_login:
-                login_path: login
-                check_path: login_check
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
             logout:
-                path:       logout
-                target:     login
+                path:       fos_user_security_logout
+                target:     fos_user_security_login
+            remember_me:
+                secret:    '%secret%'
