Possibilite de selectionner une partie

--- a/Symfony/src/CoreBundle/Resources/config/routing.yml
+++ b/Symfony/src/CoreBundle/Resources/config/routing.yml
@@ -2,4 +2,9 @@ accueil:
     path:    /
     defaults: { _controller: CoreBundle:Partie:index }
 
-
+partie:
+    path:    /partie/{id}
+    defaults:
+        _controller: CoreBundle:Partie:partie
+    requirements:
+        id: \d+
